# Sistema_Embarcado_Aero_Chico_2025

./: CMakeLists.txt  GPS_neo_6.c  GPS_neo_6.h  main.c
Lib/: GPS_neo_6.c  GPS_neo_6.h
